--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 
 title: sephdo.github.io
 email: josephfdonahue@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  ""
+#description: > # this means to ignore newlines until "baseurl:"
+#  ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sephdo
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minima
 gems:
   - jekyll-feed
 exclude:
