--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: sephdo.github.io
 email: josephfdonahue@gmail.com
 #description: > # this means to ignore newlines until "baseurl:"
 #  ""
-description: Insufferable.
+description: > Insufferable.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sephdo
