--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ github_username:  sephdo
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
+theme: minima
 gems:
   - jekyll-feed
 exclude:
